# talkbox

./: Cargo.toml
src/: handlers.rs  lib.rs  main.rs
src/handlers/: api_test.rs  create.rs  mod.rs  payloads.rs
src/models/: chatter.rs  message.rs  mod.rs  room.rs
