[package]
name = "talkbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poem = { version = "1", features = ["test"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1" }
serde_json = { version = "1" }
uuid = { version = "0.8", features = ["serde", "v4"] }